// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxList component should match the snapshot 1`] = `
<div>
  <fieldset
    class="sc-kDTinF egfusR"
  >
    <legend
      class="sc-jrQzAO eDCmoS"
    >
      Legendary legend
    </legend>
    <div
      class="sc-iCfMLu hqxfSB"
    >
      <div
        class="sc-furwcr iuZtmL"
      >
        <input
          checked=""
          class="sc-bdvvtL hNbpzH"
          data-testid="checkbox1"
          id="checkbox-1"
          type="checkbox"
        />
      </div>
      <div
        class="sc-pVTFL EWVqI"
      >
        <label
          class="sc-gsDKAQ sc-dkPtRN iTQrPj BayBM"
          for="checkbox-1"
          id="checkbox-1-label"
        >
          Checkbox One
        </label>
      </div>
    </div>
    <div
      class="sc-iCfMLu hqxfSB"
    >
      <div
        class="sc-furwcr iuZtmL"
      >
        <input
          class="sc-bdvvtL hNbpzH"
          data-testid="checkbox2"
          id="checkbox-2"
          type="checkbox"
        />
      </div>
      <div
        class="sc-pVTFL EWVqI"
      >
        <label
          class="sc-gsDKAQ sc-dkPtRN iTQrPj BayBM"
          for="checkbox-2"
          id="checkbox-2-label"
        >
          Checkbox Two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`CheckboxList component should match the snapshot 2`] = `
<div>
  <fieldset
    class="sc-kDTinF egfusR"
  >
    <div
      class="sc-iCfMLu hqxfSB"
    >
      <div
        class="sc-furwcr iuZtmL"
      >
        <input
          checked=""
          class="sc-bdvvtL hNbpzH"
          data-testid="checkbox1"
          id="checkbox-3"
          type="checkbox"
        />
      </div>
      <div
        class="sc-pVTFL EWVqI"
      >
        <label
          class="sc-gsDKAQ sc-dkPtRN iTQrPj BayBM"
          for="checkbox-3"
          id="checkbox-3-label"
        >
          Checkbox One
        </label>
      </div>
    </div>
    <div
      class="sc-iCfMLu hqxfSB"
    >
      <div
        class="sc-furwcr iuZtmL"
      >
        <input
          class="sc-bdvvtL hNbpzH"
          data-testid="checkbox2"
          id="checkbox-4"
          type="checkbox"
        />
      </div>
      <div
        class="sc-pVTFL EWVqI"
      >
        <label
          class="sc-gsDKAQ sc-dkPtRN iTQrPj BayBM"
          for="checkbox-4"
          id="checkbox-4-label"
        >
          Checkbox Two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`CheckboxList component should match the snapshot 3`] = `
<div>
  <fieldset
    class="sc-kDTinF egfusR"
  />
</div>
`;
